--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -6,7 +6,7 @@
 
 
 <section class="contact-form-wrap section">
-    <div class="container">
+    <div class="container" style="background: #BCDCFF">
         <div class="row justify-content-center">
             <div class="col-lg-6">
                 <div class="section-title text-center">
@@ -22,20 +22,20 @@
                 <form method="post">
                     {% csrf_token %}
 
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-6">
                             <div class="form-group">
-                                <label>Email Address</label>
+                                <label style="color: #000000">Email Address</label>
                                 {{ form.email|add_class:"form-control"|attr:"autofocus" }}
                                 {{ form.email.errors }}
                             </div>
                         </div>
                     </div>
 
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-6">
                             <div class="form-group">
-                                <label>Password</label>
+                                <label style="color: #000000">Password</label>
                                 {{ form.password|add_class:"form-control" }}
                                 {{ form.password.errors }}
                             </div>
