--- a/templates/appointment/appointment-detail.html
+++ b/templates/appointment/appointment-detail.html
@@ -77,7 +77,7 @@
                    Update Appointment</a>
                    
                 <br/>
-                <a href="#"
+                <a href="{% url 'reject-appointment' appointment.id %}"
                    class="btn btn-main-2 btn-round-full mt-3">
                    
                    Delete Appointment</a>
