--- a/templates/appointment/doctor-all-appointment.html
+++ b/templates/appointment/doctor-all-appointment.html
@@ -93,7 +93,7 @@
                         </a></h3>
 
                     <h4>On <span class="text-color-2">{{ appointment.date }}</span></h4>
-                    <a href="{% url 'appointment-details' appointment.id %}" class="btn btn-main my-2">See More</a>
+                    <a href="{% url 'appointment-detail' appointment.id %}" class="btn btn-main my-2">See More</a>
                 </div>
             </div>
             {% endfor %}
