--- a/templates/appointment/write-prescription.html
+++ b/templates/appointment/write-prescription.html
@@ -30,7 +30,7 @@
                         <div class="col-lg-12">
                             <div class="form-group">
                                 <label>Prescription</label>
-                                {{ form.details|add_class:"form-control" }}
+                                {{ form.description|add_class:"form-control" }}
                             </div>
                         </div>
                     </div>
