--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -52,7 +52,9 @@
                             class="icofont-thin-down"></i></a>
                     <ul class="dropdown-menu" aria-labelledby="dropdown02">
                         <li><a class="dropdown-item" href="{% url 'blood-donation-home' %}">
-                            <i class="icofont-blood-drop"></i> Blood Donation</a></li>
+                            <i class="icofont-blood-drop"></i>My Blood Donation Request</a></li>
+                        <li><a class="dropdown-item" href="{% url 'users-requests' request.user.id %}">
+                            <i class="icofont-blood-drop"></i>Others Blood Request</a></li>
                         <li><a class="dropdown-item" href="{% url 'patient-available-abmulance' %}">
                             <i class="fas fa-hand-holding-medical"></i> Ambulnace Booking</a></li>
                     </ul>
