--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,7 +24,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Appointments</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'pharmacy-home' %}">Pharmacy</a>
+                </li>
                 {% endif %}
+
+               
                 {% if request.user.is_authenticated and request.user.is_staff %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'staff-all-ambulance' %}">All Ambulance</a>
