--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,6 +20,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{%url 'doctor-all-appointments'%}">Appointments</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{%url 'heart-risk'%}">Test Prediction</a>
+                </li>
                 {% elif request.user.is_authenticated and request.user.is_patient %}
                 <li class="nav-item">
                     <a class="nav-link" href="{%url 'patient-all-appointments'%}">Appointments</a>
