--- a/templates/ambulance/staff-available-ambulance.html
+++ b/templates/ambulance/staff-available-ambulance.html
@@ -11,39 +11,11 @@
             <div class="col-lg-6 col-md-12 text-center">
                 <div class="blog-breadcrumbs-area">
                     <div class="blog-breadcrumbs-left">
-                        <h2 >All AMBULANCE LIST</h2>
+                        <h2 >AVAILABLE AMBULANCE LIST</h2>
                     </div>
                 </div>
             </div>
             
-            <div class="col-lg-3 col-md-12">
-                {% if user.is_authenticated and user.is_staff%}
-                <a href="{% url 'add-ambulance' %}"
-                   class="btn btn-main btn-round-full text-center"><i
-                        class="fa fa-plus"></i>
-                    <span>ADD AMBULANCE</span>
-                </a>
-                {% endif %}
-            </div>
-            <div class="col-lg-3 col-md-12">
-                {% if user.is_authenticated and user.is_staff%}
-                <a href="{% url 'staff-available-ambulance' %}"
-                   class="btn btn-main btn-round-full text-center"><i
-                        class="fa fa-plus"></i>
-                    <span>AVAILABLE AMBULANCE</span>
-                </a>
-                {% endif %}
-            </div>
-
-            <div class="col-lg-3 col-md-12">
-                {% if user.is_authenticated and user.is_staff%}
-                <a href="{% url 'staff-available-ambulance' %}"
-                   class="btn btn-main btn-round-full text-center"><i
-                        class="fa fa-plus"></i>
-                    <span>BOOKED AMBULANCE</span>
-                </a>
-                {% endif %}
-            </div>
         </div>
         <div class="row mt-3">
             <div class="col-lg-12">
