Staff Booked Ambulance details, edit, view

--- a/templates/ambulance/staff-all-ambulance.html
+++ b/templates/ambulance/staff-all-ambulance.html
@@ -37,7 +37,7 @@
 
             <div class="col-lg-3 col-md-12">
                 {% if user.is_authenticated and user.is_staff%}
-                <a href="{% url 'staff-available-ambulance' %}"
+                <a href="{% url 'staff-booked-ambulance' %}"
                    class="btn btn-main btn-round-full text-center"><i
                         class="fa fa-plus"></i>
                     <span>BOOKED AMBULANCE</span>
