--- a/templates/ambulance/staff-booked-ambulance.html
+++ b/templates/ambulance/staff-booked-ambulance.html
@@ -11,11 +11,11 @@
             <div class="col-lg-6 col-md-12 text-center">
                 <div class="blog-breadcrumbs-area">
                     <div class="blog-breadcrumbs-left">
-                        <h2 >AVAILABLE AMBULANCE LIST</h2>
+                        <h2 >BOOKED AMBULANCE LIST</h2>
                     </div>
                 </div>
             </div>
-
+            
         </div>
         <div class="row mt-3">
             <div class="col-lg-12">
@@ -32,7 +32,7 @@
             <div class="col-lg-12">
                 <div class="row mb-5">
                     {% if not ambulances %}
-                    <h3 class="m-3">No Ambulance Available</h3>
+                    <h3 class="m-3">No Ambulance Booked</h3>
                     {% endif %}
 
                     {% for ambulance in ambulances %}
