--- a/templates/appointment/pdf.html
+++ b/templates/appointment/pdf.html
@@ -72,7 +72,7 @@
 
 <div id="page-wrap">
 
-    <h1 style="text-align: center; font-size: 20px;">AMIC</h1>
+    <h1 style="text-align: center; font-size: 20px;">MediCare24x7</h1>
     <div class="vcard" id="contact-info">
         <p style="font-size: 16px;">
             <b>Name: </b>{{ appointment.patient.user.name }}
